--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,8 +10,8 @@
 		<input type="password" name="password">
 		<button>Login</button>
 	</form>
-	<a href="/github">GITHUB</a>
-	<a href="/google">GOOGLE</a>
-	<a href="/facebook">FACEBOOK</a>
+	<a href="/auth/github">GITHUB</a>
+	<a href="/auth/google">GOOGLE</a>
+	<a href="/auth/facebook">FACEBOOK</a>
 </body>
 </html>
