--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,5 +10,8 @@
 		<input type="password" name="password">
 		<button>Register</button>
 	</form>
+	<a href="/auth/github">GITHUB</a>
+	<a href="/auth/google">GOOGLE</a>
+	<a href="/auth/facebook">FACEBOOK</a>
 </body>
 </html>
