--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,9 @@
 	<title>Register</title>
 </head>
 <body>
+	<h1><%if(warning && warning.length > 0){%>
+			<%=warning%>
+		<%}%></h1>
 	<form action="/register" method="POST">
 		<input type="email" name="username">
 		<input type="password" name="password">
@@ -13,5 +16,6 @@
 	<a href="/auth/github">GITHUB</a>
 	<a href="/auth/google">GOOGLE</a>
 	<a href="/auth/facebook">FACEBOOK</a>
+	<a href="/profile">PROFILE</a>
 </body>
 </html>
