updated login form

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
 	<h1><%if(warning && warning.length > 0){%>
 			<%=warning%>
 		<%}%></h1>
-	<form action="/register" method="POST">
+	<form>
 		<input type="email" name="username">
 		<input type="password" name="password">
 		<button>Register</button>
