--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,31 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-	<meta charset="UTF-8">
-	<title>Register</title>
+  <meta charset="UTF-8">
+  <title>Login</title>
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <link rel="stylesheet" href="css/style.css">
+  		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-	<h1>
-		<%if(warning && warning.length > 0){%>
-			<%=warning%>
-		<%}%>
-		<%if(error && error.length > 0){%>
-			<%=error%>
-		<%}%>
-		<%if(success && success.length > 0){%>
-			<%=success%>
-		<%}%>
-	
-</h1>
-	<form action="/login" method="POST">
-		<input type="email" name="username">
-		<input type="password" name="password">
-		<button>Login</button>
-	</form>
-	<a href="/auth/github">GITHUB</a>
-	<a href="/auth/google">GOOGLE</a>
-	<a href="/auth/facebook">FACEBOOK</a>
-	<a href="/profile">PROFILE</a>
+<div class="container text-center">
+	<div class="row">
+		<h2>Registration form</h2>
+	</div>
+</div>
+<br>
+<br>
+<div class="container">
+    <div class="text-center">
+     <%if(warning && warning.length > 0){%>
+      <%=warning%>
+    <%}%>
+    <%if(error && error.length > 0){%>
+      <%=error%>
+    <%}%>
+    <%if(success && success.length > 0){%>
+      <%=success%>
+    <%}%>
+    </div>
+
+<div class="row">
+<div class="col-md-4 col-md-offset-4">
+<div class="form-body">
+    <ul class="nav nav-tabs final-login">
+        <li class="active"><a data-toggle="tab" href="#sectionA">Sign In</a></li>
+        <li><a data-toggle="tab" href="#sectionB">Join us!</a></li>
+    </ul>
+    <div class="tab-content">
+        <div id="sectionA" class="tab-pane fade in active">
+        <div class="innter-form">
+            <form class="sa-innate-form"action="/login" method="POST">
+            <label>Username</label>
+            <input type="text" name="username">
+            <label>Password</label>
+            <input type="password" name="password">
+            <button type="submit">Sign In</button>
+            <a href="">Forgot Password?</a>
+            </form>
+            </div>
+            <div class="social-login">
+            <p>- - - - - - - - - - - - - Sign In With - - - - - - - - - - - - - </p>
+    		<ul>
+            <li><a href="/auth/facebook"><i class="fa fa-facebook"></i> Facebook</a></li>
+            <li><a href="/auth/google"><i class="fa fa-google-plus"></i> Google</a></li>
+            <li><a href="/auth/github"><i class="fa fa-github"></i> Github</a></li>
+            </ul>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div id="sectionB" class="tab-pane fade">
+			<div class="innter-form">
+            <form class="sa-innate-form" action="/register" method="POST">
+            <label>Name</label>
+            <input type="text" name="username">
+            <label>Password</label>
+            <input type="password" name="password">
+            <button type="submit">Join now</button>
+            <p>By clicking Join now, you agree to hifriends's User Agreement, Privacy Policy, and Cookie Policy.</p>
+            </form>
+            </div>
+            <div class="social-login">
+            <p>- - - - - - - - - - - - - Register With - - - - - - - - - - - - - </p>
+			<ul>
+            <li><a href="/auth/facebook"><i class="fa fa-facebook"></i> Facebook</a></li>
+            <li><a href="/auth/google"><i class="fa fa-google-plus"></i> Google</a></li>
+            <li><a href="/auth/github"><i class="fa fa-github"></i> Github</a></li>
+            </ul>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+
 </body>
 </html>
-
